# Agamotto

./: .gitignore  AGENTS.md  Agamotto_NEA.docx  Agamotto_NEA.md  Cargo.toml  Dioxus.toml  PHASE8_ALGORITHMS.md  ROADMAP.md  package-lock.json  package.json
assets/: main.css
convex/: schedules.ts  schema.ts
src/: error.rs  main.rs  state.rs  types.rs
src/components/: config_panel.rs  debt_counter.rs  excluded_list.rs  failure_markers.rs  habit_alert.rs  home.rs  identity_alerts.rs  metrics_panel.rs  mod.rs  momentum_indicator.rs  navbar.rs  overload_banner.rs  saved_schedules.rs  schedule_list.rs  schedule_view.rs  task_form.rs  task_list.rs  timeline.rs  what_if_panel.rs
src/server/: convex_client.rs  debt.rs  edf.rs  forecast.rs  functions.rs  greedy.rs  habit.rs  identity.rs  knapsack.rs  metrics.rs  mod.rs  momentum.rs  persistence.rs  recovery.rs  regret.rs  simulation.rs  tests.rs
