[package]
name = "agamotto"
version = "0.1.0"
authors = ["srikrishna"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "fullstack"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Server-only deps — gated behind `server` feature so they don't compile for WASM
convex = { version = "0.10.3", optional = true }
dotenvy = { version = "0.15", optional = true }
maplit = { version = "1", optional = true }
web-push = { version = "0.10", optional = true }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "convex", "dotenvy", "maplit", "web-push"]
